add simulador logic

--- a/src/main/resources/templates/simulador.html
+++ b/src/main/resources/templates/simulador.html
@@ -116,7 +116,7 @@
                                         th:text="${'$' + #numbers.formatDecimal(p.capitali, 1, 'COMMA', 2, 'POINT')}"></td>
                                     <td class="text-center text-success fw-semibold" th:text="${p.tasaInteres + '%'}"></td>
                                     <td class="text-center" th:text="${p.tiempo + ' años'}"></td>
-                                    <td class="text-end fw-bold text-primary"
+                                    <td class="text-enddy fw-bold text-primary"
                                         th:text="${'$' + #numbers.formatDecimal(p.montof, 1, 'COMMA', 2, 'POINT')}"></td>
                                     <td class="text-end fw-bold text-primary"
                                         th:text="${'$' + #numbers.formatDecimal(p.montof - p.capitali, 1, 'COMMA', 2, 'POINT')}"></td>
